# didactic-upgrade-monads

./: free.hs  monads.cabal
src/: Main.hs  upgrade-free.hs  upgrade.hs  upgradeT.hs
src/Upgrade/: Core.hs  DSL.hs  Util.hs
