name:                monads
version:             0.1.0.0
license:             GPL-2
license-file:        LICENSE
author:              Carlos Sierra Andrés
maintainer:          csierra@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable upgrade
  default-language:    Haskell2010
  hs-source-dirs:      src
  main-is:             upgradeT.hs
  build-depends:       base > 4.6, convertible, mtl, directory, HDBC, HDBC-sqlite3
  default-extensions:  ExistentialQuantification,RankNTypes,MultiParamTypeClasses

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Upgrade.Core, Upgrade.DSL
  default-extensions:  ExistentialQuantification,RankNTypes,MultiParamTypeClasses
  build-depends:       base > 4.6, convertible, mtl, directory, HDBC, HDBC-sqlite3
